--- a/OPass/Storyboard/Schedule.storyboard
+++ b/OPass/Storyboard/Schedule.storyboard
@@ -11,7 +11,7 @@
         <!--Schedule-->
         <scene sceneID="JLP-8T-Nuq">
             <objects>
-                <viewController storyboardIdentifier="Schedule" id="da8-XG-o1M" userLabel="Schedule" customClass="ScheduleViewController" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="Schedule" id="da8-XG-o1M" userLabel="Schedule" customClass="ScheduleViewController" customModule="OPass" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="GI1-7h-ouj">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
