--- a/OPass/Tabs/ScheduleTab/ScheduleTableViewCell.xib
+++ b/OPass/Tabs/ScheduleTab/ScheduleTableViewCell.xib
@@ -1,25 +1,23 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
-    <device id="retina4_7" orientation="portrait">
-        <adaptation id="fullscreen"/>
-    </device>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14810.11" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+    <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14766.13"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="ScheduleCell" id="l9Y-7J-4kA" customClass="ScheduleTableViewCell">
+        <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="ScheduleCell" id="l9Y-7J-4kA" customClass="ScheduleTableViewCell" customModule="OPass" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="420" height="80"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="l9Y-7J-4kA" id="U81-Gg-HeJ">
-                <rect key="frame" x="0.0" y="0.0" width="420" height="79.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="420" height="80"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsLetterSpacingToFitWidth="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TdY-Ng-p1O">
-                        <rect key="frame" x="32" y="11" width="326" height="35"/>
+                        <rect key="frame" x="27" y="11" width="336" height="35"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="35" id="8Ty-3Y-mqM"/>
                         </constraints>
@@ -28,17 +26,17 @@
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="HH" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" minimumFontSize="13" adjustsLetterSpacingToFitWidth="YES" translatesAutoresizingMaskIntoConstraints="NO" id="R4H-1T-Ebg">
-                        <rect key="frame" x="20" y="34" width="150" height="35"/>
+                        <rect key="frame" x="20" y="34" width="180" height="35"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="35" id="hkV-D8-Dpt"/>
-                            <constraint firstAttribute="width" constant="150" id="m57-H3-wA8"/>
+                            <constraint firstAttribute="width" constant="180" id="m57-H3-wA8"/>
                         </constraints>
                         <fontDescription key="fontDescription" type="system" pointSize="16"/>
                         <color key="textColor" red="0.5" green="0.5" blue="0.5" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wce-ZU-hQC">
-                        <rect key="frame" x="180" y="41.5" width="37.5" height="20"/>
+                        <rect key="frame" x="210" y="41.5" width="37.5" height="20"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="20" id="Gsg-RD-xUh"/>
                         </constraints>
@@ -47,12 +45,16 @@
                         <nil key="highlightedColor"/>
                     </label>
                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="q7p-MF-tNF">
-                        <rect key="frame" x="363" y="22" width="22" height="36"/>
+                        <rect key="frame" x="368" y="24" width="32" height="32"/>
                         <constraints>
-                            <constraint firstAttribute="width" constant="22" id="pXX-Ng-x1P"/>
+                            <constraint firstAttribute="width" secondItem="q7p-MF-tNF" secondAttribute="height" multiplier="1:1" id="3d8-ss-VkA"/>
+                            <constraint firstAttribute="height" constant="32" id="tXu-dJ-YHF"/>
                         </constraints>
                         <fontDescription key="fontDescription" type="system" pointSize="20"/>
                         <state key="normal" title="heart"/>
+                        <userDefinedRuntimeAttributes>
+                            <userDefinedRuntimeAttribute type="boolean" keyPath="autoCollapse" value="NO"/>
+                        </userDefinedRuntimeAttributes>
                         <connections>
                             <action selector="favoriteTouchDownAction:" destination="l9Y-7J-4kA" eventType="touchDown" id="5QI-IL-lEo"/>
                             <action selector="favoriteTouchUpInsideAction:" destination="l9Y-7J-4kA" eventType="touchUpInside" id="hFG-tV-VkR"/>
@@ -61,7 +63,7 @@
                     </button>
                 </subviews>
                 <constraints>
-                    <constraint firstAttribute="trailingMargin" secondItem="q7p-MF-tNF" secondAttribute="trailing" constant="15" id="4Ha-SQ-Y0T"/>
+                    <constraint firstAttribute="trailingMargin" secondItem="q7p-MF-tNF" secondAttribute="trailing" constant="5" id="4Ha-SQ-Y0T"/>
                     <constraint firstItem="TdY-Ng-p1O" firstAttribute="leading" secondItem="U81-Gg-HeJ" secondAttribute="leadingMargin" constant="12" id="4SL-D5-Uyz"/>
                     <constraint firstItem="R4H-1T-Ebg" firstAttribute="leading" secondItem="U81-Gg-HeJ" secondAttribute="leading" constant="20" id="NJJ-P0-CRQ"/>
                     <constraint firstItem="q7p-MF-tNF" firstAttribute="centerY" secondItem="U81-Gg-HeJ" secondAttribute="centerY" id="Teq-NY-e09"/>
